[tool.poetry]
name = "movie-names"
version = "0.1"
description = ""
authors = [
"Shane <loppys9@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/loppys9/movie-names"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
torch = "^2.4.1"
tqdm = "^4.66.5"

[tool.poetry.group.test.dependencies]
pytest = "*"
mypy = "*"
black = "*"
isort = "*"

[tool.black]
line-length = 132
